# CloudCompare

./: .gitignore
plugins/core/Standard/: CMakeLists.txt
plugins/core/Standard/qTcpPlugin/: CMakeLists.txt  CalibrationDialog.cpp  CalibrationDialog.h  CcTcpServer.cpp  CcTcpServer.h  CommLogger.cpp  CommLogger.h  Command.h  CommandDispatcher.cpp  CommandDispatcher.h  CommandParser.cpp  CommandParser.h  EigenUtils.cpp  EigenUtils.h  ExampleInit.cpp  Handlers.cpp  Handlers.h  ICommandHandler.h  LJS8_ACQ.cpp  LJS8_ACQ.h  LJS8_IF.lib  MachineProxy.cpp  MachineProxy.h  PointCloudService.cpp  PointCloudService.h  ProbeFit6DOF_BC.cpp  ProbeFit6DOF_BC.h  TcpClient.cpp  TcpClient.h  info.json  qTcpPlugin.cpp  qTcpPlugin.h  qTcpPlugin.qrc
plugins/core/Standard/qTcpPlugin/include/: CMakeLists.txt  LJS8_ErrorCode.h  LJS8_IF.h
plugins/core/Standard/qTcpPlugin/src/: CMakeLists.txt
qCC/: ccApplication.cpp  icons.qrc  main.cpp  mainwindow.cpp
qCC/ui_templates/: aboutDlg.ui  mainWindow.ui
